--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
 <div class="container" style="margin-top: 100px;">
-   <app-home></app-home>
+   <router-outlet></router-outlet>
 </div>
 
