--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,25 +1,28 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">Heartify</a>
+        <a class="navbar-brand" routerLink="/">Heartify</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="_accountService.currentUser$ | async">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Matches</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Lists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " href="#">Messages</a>
-            </li>
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <ng-container *ngIf="_accountService.currentUser$ | async">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " routerLink="message" routerLinkActive="active">Messages</a>
+                </li>
+            </ng-container>
+
         </ul>
 
 
-        <nav *ngIf="_accountService.currentUser$ | async" class="navbar navbar-expand-lg navbar-dark bg-dark" dropdown>
+        <nav *ngIf="(_accountService.currentUser$ | async) as user" class="navbar navbar-expand-lg navbar-dark bg-primary" dropdown>
             <div class="container-fluid">
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -30,9 +33,9 @@
                 <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false" dropdownToggle>
-                                My Profile
+                                 {{user.username | titlecase}}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" *dropdownMenu="">
                                 <li><a class="dropdown-item" href="#">Edit Profile</a></li>
@@ -46,7 +49,8 @@
 
 
 
-        <form *ngIf="!(_accountService.currentUser$ | async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+        <form *ngIf="!(_accountService.currentUser$ | async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()"
+            autocomplete="off">
             <input name="username" [(ngModel)]="model.username" class="form-control me-2" type="text"
                 placeholder="Username">
 
